--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 ---
 layout: archive
 author_profile: true
+header:
+  overlay_image: unsplash-image-1.jpg
+  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
+  cta_url: "https://unsplash.com"
 ---
 
 {% include base_path %}
