Attempt to update splash

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: archive
 author_profile: true
 header:
-  overlay_image: unsplash-image-1.jpg
+  overlay_image: trysplash.png
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
   cta_url: "https://unsplash.com"
 ---
