--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
-layout: archive
+layout: splash
 author_profile: true
 header:
-  overlay_image: splash.jpg
+  image: splash.jpg
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
 ---
 
