--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: splash
 author_profile: true
 header:
-  image: splash.jpg
+  overlay_image: splash.jpg
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
 ---
 
