Even more content updates

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
-layout: splash
+layout: archive
 author_profile: true
+excerpt: "Overcoming imposter syndrome, one day at a time"
 header:
   overlay_image: splash.jpg
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
