Going live again

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
-layout: archive
-author_profile: true
+layout: splash
 excerpt: "Overcoming imposter syndrome, one day at a time"
 header:
   overlay_image: splash.jpg
