--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: splash
+layout: archive
 excerpt: "Overcoming imposter syndrome, one day at a time"
 header:
   overlay_image: splash.jpg
