--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: single
 excerpt: "Overcoming imposter syndrome, one day at a time"
+author_profile: true
 header:
   overlay_image: splash.jpg
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
